<resources>
    <string name="app_name">WeatherNews</string>
    <string name="scrollText">
        something
        <!--        Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008. Most versions of Android are proprietary. The core components are taken from the Android Open Source Project (AOSP), which is free and open-source software primarily licensed under the Apache License. When Android is actually installed on devices, ability to modify the otherwise FOSS software is usually restricted, either by not providing the corresponding source code or preventing reinstallation through technical measures, rendering the installed version proprietary. Most Android devices ship with additional proprietary software pre-installed,[14] most notably Google Mobile Services (GMS)[15] which includes core apps such as Google Chrome, the digital distribution platform Google Play, and associated Google Play Services development platform. Over 70 percent of Android smartphones run Google\'s ecosystem, some with vendor-customized user interface and software suite, such as TouchWiz and later One UI by Samsung, and HTC Sense.[16] Competing Android ecosystems and forks include Fire OS (developed by Amazon) or LineageOS. However the "Android" name and logo are trademarks of Google which imposes standards to restrict the use of Android branding by "uncertified" devices outside their ecosystem.[17][18]. The source code has been used to develop variants of Android on a range of other electronics, such as game consoles, digital cameras, portable media players, PCs, each with a specialized user interface. Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google. Software packages on Android, which use the APK format, are generally distributed through proprietary application stores like Google Play Store, Amazon Appstore (including for Windows 11), Samsung Galaxy Store, Huawei AppGallery, Cafe Bazaar, and GetJar, or open source platforms like Aptoide or F-Droid. Android has been the best-selling OS worldwide on smartphones since 2011 and on tablets since 2013. As of May 2021, it has over three billion monthly active users, the largest installed base of any operating system, and as of January 2021, the Google Play Store features over 3 million apps Android 12, released on October 4, 2021, is the latest version.-->
    </string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="background_image">backgroundImage</string>
    <string name="search">SEARCH</string>
    <string name="searchLabel">Search</string>
    <string name="weatherDesc">Sunny</string>
    <string name="cityName">Toronto</string>
    <string name="feelslike">feels like 7</string>
    <string name="temperature">-2</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="history">History</string>

</resources>