<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/cityNameInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="Toronto"
        android:hint="@string/enter_city_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn"
        app:layout_constraintTop_toTopOf="parent"
         />

    <Button
        android:id="@+id/btn"
        android:layout_height="48dp"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/searchLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cityNameInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
         />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityNameInput">
        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/mainCard"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/grey_700"
                app:layout_constraintTop_toBottomOf="@+id/cityNameInput"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainCardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toTopOf="@+id/mainCard">


                    <TextView
                        android:id="@+id/weatherMainDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherDesc"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/weatherMainImage"
                        app:layout_constraintStart_toStartOf="@+id/weatherMainImage"
                        app:layout_constraintTop_toBottomOf="@+id/weatherMainImage" />

                    <TextView
                        android:id="@+id/CityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cityName"
                        android:textColor="@color/white"
                        android:textSize="42sp"
                        app:layout_constraintStart_toStartOf="@+id/mainCardLayout"
                        app:layout_constraintTop_toTopOf="@+id/mainCardLayout" />

                    <TextView
                        android:id="@+id/feelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feelslike"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/weatherMainDesc"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/mainCardLayout"
                        app:layout_constraintTop_toBottomOf="@+id/CityName" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/temperature"
                        android:textColor="@color/white"
                        android:textSize="52sp"
                        app:flow_wrapMode="aligned"
                        android:autoSizeMinTextSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/weatherMainImage"
                        app:layout_constraintLeft_toRightOf="@+id/CityName"
                        app:layout_constraintStart_toEndOf="@+id/CityName"
                        app:layout_constraintTop_toTopOf="@+id/mainCardLayout" />

                    <ImageView
                        android:id="@+id/weatherMainImage"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_marginTop="-16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/mainCardLayout"
                        app:srcCompat="@drawable/sunrise"
                        android:contentDescription="@string/weather_icon" />

                    <ImageView
                        android:id="@+id/imgSunrise"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weatherMainDesc"
                        app:srcCompat="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/tvSunriseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imgSunrise"
                        app:layout_constraintHorizontal_bias="0.388"
                        app:layout_constraintStart_toStartOf="@+id/imgSunrise"
                        app:layout_constraintTop_toBottomOf="@+id/imgSunrise"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/imgWindSpeed"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintRight_toLeftOf="@+id/imgHumidity"
                        app:layout_constraintStart_toEndOf="@+id/imgSunrise"
                        app:layout_constraintTop_toBottomOf="@+id/weatherMainDesc"
                        app:srcCompat="@drawable/wind" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imgWindSpeed"
                        app:layout_constraintStart_toStartOf="@+id/imgWindSpeed"
                        app:layout_constraintTop_toBottomOf="@+id/imgWindSpeed" />

                    <ImageView
                        android:id="@+id/imgHumidity"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/imgWindSpeed"
                        app:layout_constraintTop_toBottomOf="@+id/weatherMainDesc"
                        app:srcCompat="@drawable/humidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imgHumidity"
                        app:layout_constraintStart_toStartOf="@+id/imgHumidity"
                        app:layout_constraintTop_toBottomOf="@+id/imgHumidity" />

                    <ImageView
                        android:id="@+id/imgSunset"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/imgHumidity"
                        app:layout_constraintTop_toBottomOf="@+id/weatherMainDesc"
                        app:srcCompat="@drawable/sunset" />

                    <TextView
                        android:id="@+id/tvSunsetTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/imgSunset"
                        app:layout_constraintStart_toStartOf="@+id/imgSunset"
                        app:layout_constraintTop_toBottomOf="@+id/imgSunset" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sewsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/newsSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"
                    android:textSize="32sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toSavedCities"
                    android:text="@string/history"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/newsSection"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">


            </androidx.recyclerview.widget.RecyclerView>






        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>